[package]
name = "library_geom_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "seq_geom_parser"
path = "src/lib/lib.rs"

[[bin]]
name = "test_parser"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.68"
pest = "2.5.4"
pest_derive = "2.5.4"
