[package]
name = "seq_geom_parser"
version = "0.1.2"
edition = "2021"
authors = [
  "Rob Patro <rob@cs.umd.edu>",
  "Dongze He <dhe17@umd.edu>",
]
description = "A small crate for parsing library geometry specifications for single-cell sequencing."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/seq_geom_parser"
homepage = "https://github.com/COMBINE-lab/seq_geom_parser"
include = [
  "/src/*.rs",
  "/src/lib/*.rs",
  "/src/grammar/frag_geom.pest",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
]
keywords = [
  "single-cell",
  "preprocessing",
  "RNA-seq",
]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "seq_geom_parser"
path = "src/lib/lib.rs"

[[bin]]
name = "test_parser"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.69"
pest = "2.5.6"
pest_derive = "2.5.6"
